2017-09-07  Araki Ken  <arakiken@users.sf.net>

	* im_wnn.c: Access to uninitialized memory is fixed.

	* ui_display_linux.c: /sys/class/input/event%d/device/name is prefered to
	  /sys/class/input/input%d/name.

2017-09-06  Araki Ken  <arakiken@users.sf.net>

	* vte.c: Whether ui_customize_font_file() actually customizes font settings
	  is checked before redrawing screen.

	* ui_font_config.c: change_custom_cache() and customize_font_name() return 0
	  if cached value and new value are the same.

2017-09-05  Araki Ken  <arakiken@users.sf.net>

	* ui_im_status_screen.c: max_width of draw_screen() is maximum width
	  of all ui_display_t on wayland.

	* wayland/ui_display.c:
	  - If keyboard_enter() is called in entering input method surface, it sets
	    wlserv->current_kbd_surface to its parent surface instead of input method one.
	  - x and y are removed from arugments of create_surface(), and ui_display_move()
	    is called just after create_shm_buffer().
	  - focus_gtk_window() is not called if input method surface is clicked.

	* wayland/ui_window.c:
	  - win->x and win->y of root windows aren't modified on wayland.

	* im_fcitx.c, im_ibus.c:
	  - NO_XKB macro which is defined on framebuffer and console is added.
	  - connection_handler() works on wayland.

2017-09-03  Araki Ken  <arakiken@users.sf.net>

	* im_m17nlib.c: XKeysymToString() is implemented.

	* im_fcitx.c: fcitx_client_set_cursor_rect() is called in connected().

2017-09-02  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: vte, install-vte and clean-vte targets are added.

2017-09-02  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_font.c: The height of compl font is forcibly changed to the same
	  one as base font.

2017-09-01  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c: focus_gtk_window(win, time) is not called if
	  ev.type is ButtonRelease.

	* wayland/ui_window.c: win->x and win->y are set to -1 in ui_window_unmap()